syntax = "proto3";

package put;

option go_package = "putpb/";



message createUserRequest {
    int32    Id=1;
    string   Name      =2;  	
    string   Gender    =3;
	string   Birthday  =4;
	string   Avatar    =5;
}



message createCardRequest {
    int32  user_id =1;
    string Bankname = 2;
    string serial =3;
}

message createResponse {
    string result =1;
}

service crudService {

    rpc createUser(createUserRequest) returns (createResponse){};
    rpc createCard(createCardRequest) returns (createResponse){};
 
}